# hacknc2020

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: Cargo.toml  Dockerfile  testing_script.py
backend/src/: main.rs
backend/src/lib/: database.rs  document.rs  fact.rs  mod.rs  user.rs  util.rs
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.js  utils.js
ui/src/components/: CreditPreview.js  DirectFact.js  DirectFactComponent.js  DirectFactCreationModal.js  FactComponent.js  FactPreviewComponent.js  Header.js  PdfPreview.js  ResultPageFactPreviewComponent.js  ResultsPage.js  Search.js  Signin.js  Signup.js  SuperiorFact.js  SuperiorFactComponent.js  TickReference.js  Upload.js
ui/src/css/: App.css  App.css.map  App.scss
